objects/sf42_Costs__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order_Processing__c</referenceTo>
        <relationshipLabel>Direct Costs</relationshipLabel>
        <relationshipName>Direct_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf42_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_Auto_Number__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Auto_Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_COGS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COGS_ALI</fullName>
                </value>
                <value>
                    <fullName>COGS_CM</fullName>
                </value>
                <value>
                    <fullName>COGS_NDT</fullName>
                </value>
                <value>
                    <fullName>COGS_Other Products</fullName>
                </value>
                <value>
                    <fullName>COGS Others</fullName>
                </value>
                <value>
                    <fullName>Shipping Costs</fullName>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Working Time Costs</fullName>
                </value>
                <value>
                    <fullName>Other Direct Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PT - Direct Costs</label>
    <nameField>
        <label>Costs Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Direct Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>